--- a/taller-41-ejerccio/index.html
+++ b/taller-41-ejerccio/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="7.eje.js"></script>
+    <script src="main3.js"></script>
 </body>
 </html>
