--- a/Clases/main.html
+++ b/Clases/main.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./seccion10/main.js"></script>
+    <script src="InventarioVideojuegos.js"></script>
 </body>
 </html>
